[TEX] Improve forward Laplacian benchmark [no ci]

--- a/paper/preamble/custom.tex
+++ b/paper/preamble/custom.tex
@@ -79,6 +79,11 @@ group-minimum-digits={3}%
 % ===================================================================
 \usepackage{algorithm}
 \usepackage{algpseudocode}
+
+% ===================================================================
+% TABLES
+% ===================================================================
+\usepackage{multirow}
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../main"
