[REF] Improve checklist [no ci]

--- a/paper/sections/checklist.tex
+++ b/paper/sections/checklist.tex
@@ -97,6 +97,7 @@
 \item[] Question: Does the paper report error bars suitably and correctly defined or other appropriate information about the statistical significance of the experiments?
 \item[] Answer: \answerYes{}
 \item[] Justification: While we do not show mean and standard deviations over different model initializations for training curves, we aimed to use a thorough tuning protocol to avoid artifacts from insufficient hyper-parameter tuning and also conducted experiments with alternative hyper-parameter search methods (Bayesian versus random/grid) to ensure the consistency of our results.
+  To further probe the robustness of our results, we analyzed their stability w.r.t.\,random seed in for one experiment in \Cref{sec:4d-heat-robustness-app}.
 \item[] Guidelines:
   \begin{itemize}
   \item The answer NA means that the paper does not include experiments.
