Incorporate the suggested changes

--- a/paper/sections/experimental_details.tex
+++ b/paper/sections/experimental_details.tex
@@ -808,14 +808,14 @@ For the biggest architecture, full and layer-wise ENGD lead to out-of-memory err
 \end{itemize}
 
 \subsection{(9)+1-d Logarithmic Fokker-Planck Equations with Random Search}\label{sec:fokker10d-appendix}
-For a given drift $\vmu: [0, 1]\times \mathbb R^d \to \mathbb R^d$ and diffusivity $\sigma:[0,1]\to\mathbb R^{d\times d}$
+For a given drift $\vmu: [0, 1]\times \sR^d \to \sR^d$ and diffusivity $\sigma:[0,1]\to\sR^{d\times d}$
 the Fokker-Planck equation with initial probability density $p_0$ is given by
 \begin{equation*}
   \partial_t p 
   +
   \operatorname{div}(\vmu p) 
   -
-  \frac12\operatorname{tr}(\sigma \sigma^\top \nabla^2 p) 
+  \frac12\Tr(\sigma \sigma^\top \nabla^2 p) 
   =
   0,
   \quad
@@ -823,8 +823,8 @@ the Fokker-Planck equation with initial probability density $p_0$ is given by
   =
   p_0,
 \end{equation*}
-which is posed on $[0, 1]\times \mathbb R^d$.
-Note that $p(t,\cdot)$ is a probability density on $\mathbb R^d$ for all $t\in[0,1]$. We transform the above equation into logarithmic 
+which is posed on $[0, 1]\times \sR^d$.
+Note that $p(t,\cdot)$ is a probability density on $\sR^d$ for all $t\in[0,1]$. We transform the above equation into logarithmic 
 space via $q=\log(p)$. Then $q$ solves
 \begin{equation*}
   \partial_t q 
@@ -843,9 +843,9 @@ space via $q=\log(p)$. Then $q$ solves
   =
   \log p_0.
 \end{equation*}
-For the concrete example of the main text, we set $\vmu(t, \vx)=-\frac12x$ and $\sigma = \sqrt{2}\mI$. 
+For the concrete example of the main text, we set $\vmu(t, \vx)=-\frac12x$ and $\sigma = \sqrt{2}\mI \in \sR^{d\times d}$. 
 We consider a 9+1 dimensional Fokker-Planck equation in logarithmic space and replace the unbounded 
-domain by $[0, 1]\times [-5, 5]$. Precisely, we aim to solve the 
+domain by $[0, 1]\times [-5, 5]^d$. Precisely, we aim to solve the 
 equation
 \begin{equation*}
   \partial_t q(t, \vx)
