--- a/paper/sections/experimental_details.tex
+++ b/paper/sections/experimental_details.tex
@@ -807,104 +807,6 @@ For the biggest architecture, full and layer-wise ENGD lead to out-of-memory err
   \end{itemize}
 \end{itemize}
 
-\subsection{(9)+1-d Logarithmic Fokker-Planck Equations with Random Search}\label{sec:fokker10d-appendix}
-For a given drift $\vmu: [0, 1]\times \sR^d \to \sR^d$ and diffusivity $\sigma:[0,1]\to\sR^{d\times d}$
-the Fokker-Planck equation with initial probability density $p_0$ is given by
-\begin{equation*}
-  \partial_t p 
-  +
-  \operatorname{div}(\vmu p) 
-  -
-  \frac12\Tr(\sigma \sigma^\top \nabla^2 p) 
-  =
-  0,
-  \quad
-  p(0)
-  =
-  p_0,
-\end{equation*}
-which is posed on $[0, 1]\times \sR^d$.
-Note that $p(t,\cdot)$ is a probability density on $\sR^d$ for all $t\in[0,1]$. We transform the above equation into logarithmic 
-space via $q=\log(p)$. Then $q$ solves
-\begin{equation*}
-  \partial_t q 
-  + 
-  \operatorname{div}(\vmu)
-  +
-  \nabla q \cdot \vmu
-  -
-  \frac12 \|\sigma^\top \nabla q\|^2
-  -
-  \frac12\operatorname{tr}(\sigma\sigma^\top\nabla^2q)
-  =
-  0,
-  \quad
-  q(0)
-  =
-  \log p_0.
-\end{equation*}
-For the concrete example of the main text, we set $\vmu(t, \vx)=-\frac12x$ and $\sigma = \sqrt{2}\mI \in \sR^{d\times d}$. 
-We consider a 9+1 dimensional Fokker-Planck equation in logarithmic space and replace the unbounded 
-domain by $[0, 1]\times [-5, 5]^d$. Precisely, we aim to solve the 
-equation
-\begin{equation*}
-  \partial_t q(t, \vx)
-  -
-  \frac{d}{2}
-  -
-  \frac12 \nabla q(t, \vx)\cdot \vx
-  -
-  \| \nabla q(t, \vx) \|^2
-  -
-  \Delta q(t, \vx)
-  =
-  0,
-  \quad 
-  q(0) = \log (p^*(0)),
-\end{equation*}
-where $d=9$, $t\in[0, 1]$ and $\vx\in[-5, 5]$. The solution $q^*=\log(p^*)$ is
-given as $p^*(t, \vx) \sim \mathcal N (0, \exp(-t)\mI + (1-\exp(-t))2\mI)$.
-The PINN loss includes the PDE residual and the initial conditions.
-We model the solution with a medium sized tanh-activated 
-MLP with $D=\num{118145}$ and the layer structure
-$10 \to 256 \to 256 \to 128 \to 128 \to 1$ and use batch sizes of 
-$N_{\Omega} = \num{3000}$, $N_{\partial\Omega} = \num{1000}$. Each run is
-assigned a budget of $\num{6000}\,\text{s}$. \Cref{fig:fokker_10d-appendix} visualizes the results.
-
-\begin{figure}[!h]
-  \centering
-  \def\pathToFigs{kfac_pinns_exp/exp43_log_fokker_planck9d_isotropic_gaussian_random}
-  \begin{subfigure}[t]{1.0\linewidth}
-    \caption{}\label{subfig:fokker_10d-time}
-    \includegraphics{\pathToFigs/l2_error_over_time.pdf}
-    \includegraphics{\pathToFigs/loss_over_time.pdf}
-  \end{subfigure}
-  \begin{subfigure}[t]{1.0\linewidth}
-    \caption{}\label{subfig:fokker_10d-step}
-    \includegraphics{\pathToFigs/l2_error_over_step.pdf}
-    \includegraphics{\pathToFigs/loss_over_step.pdf}
-  \end{subfigure}
-  \caption{Training loss and evaluation $L_2$ error for 
-  learning the solution to a (9+1)d log Fokker-Planck equation 
-  over (\subref{subfig:poisson_10d-time}) time and (\subref{subfig:poisson_10d-step}) steps.}\label{fig:fokker_10d-appendix}
-\end{figure}
-
-\paragraph{Search space details} The runs shown in 
-\Cref{fig:fokker_10d-appendix} were determined to be the best 
-via a random search on the following search spaces which each 
-optimizer given approximately the same total 
-computational time ($\mathcal{U}$ denotes a uniform, 
-and $\mathcal{LU}$ a log-uniform distribution):
-\begin{itemize}
-  \def\pathToRuns{kfac_pinns_exp/exp43_log_fokker_planck9d_isotropic_gaussian_random/tex}
-\item \textbf{SGD:} \input{\pathToRuns/sweep_SGD.tex}
-\item \textbf{Adam:} \input{\pathToRuns/sweep_Adam.tex}
-\item \textbf{Hessian-free:} \input{\pathToRuns/sweep_HessianFree.tex}
-\item \textbf{LBFGS:} \input{\pathToRuns/sweep_LBFGS.tex}
-\item \textbf{KFAC:} \input{\pathToRuns/sweep_KFAC.tex}
-\item \textbf{KFAC*:} \input{\pathToRuns/sweep_KFAC_auto.tex}
-\end{itemize}
-
 \subsection{Robustness Under Model Initialization for 4+1d Heat Equation}\label{sec:4d-heat-robustness-app}
 
 Here we study the robustness of our results from \Cref{sec:4d-heat-app} for the 4+1d heat equation when initializing the neural network differently.
@@ -967,8 +869,46 @@ The runs shown in \Cref{fig:heat4d-bayes-appendix} correspond to the following h
 \item \textbf{KFAC*:} \input{\pathToRuns/sweep_KFAC_auto.tex}
 \end{itemize}
 
-\subsection{(9+1)-d Logarithmic Fokker-Planck Equations with Random Search}\label{sec:fokker10d-appendix}
-We consider a (9+1)-dimensional Fokker-Planck equation in logarithmic space,
+\subsection{9+1-d Logarithmic Fokker-Planck Equation with Random Search}\label{sec:fokker10d-appendix}
+For a given drift $\vmu: [0, 1]\times \sR^d \to \sR^d$ and diffusivity $\sigma:[0,1]\to\sR^{d\times d}$
+the Fokker-Planck equation with initial probability density $p_0$ is given by
+\begin{equation*}
+  \partial_t p
+  +
+  \operatorname{div}(\vmu p)
+  -
+  \frac12\Tr(\sigma \sigma^\top \nabla^2 p)
+  =
+  0,
+  \quad
+  p(0)
+  =
+  p_0,
+\end{equation*}
+which is posed on $[0, 1]\times \sR^d$.
+Note that $p(t,\cdot)$ is a probability density on $\sR^d$ for all $t\in[0,1]$. We transform the above equation into logarithmic
+space via $q=\log(p)$. Then $q$ solves
+\begin{equation*}
+  \partial_t q
+  +
+  \operatorname{div}(\vmu)
+  +
+  \nabla q \cdot \vmu
+  -
+  \frac12 \|\sigma^\top \nabla q\|^2
+  -
+  \frac12\operatorname{tr}(\sigma\sigma^\top\nabla^2q)
+  =
+  0,
+  \quad
+  q(0)
+  =
+  \log p_0.
+\end{equation*}
+For the concrete example of the main text, we set $\vmu(t, \vx)=-\frac12x$ and $\sigma = \sqrt{2}\mI \in \sR^{d\times d}$.
+We consider a 9+1 dimensional Fokker-Planck equation in logarithmic space and replace the unbounded
+domain by $[0, 1]\times [-5, 5]^d$. Precisely, we aim to solve the
+equation
 \begin{equation*}
   \partial_t q(t, \vx)
   -
@@ -984,12 +924,14 @@ We consider a (9+1)-dimensional Fokker-Planck equation in logarithmic space,
   \quad
   q(0) = \log (p^*(0)),
 \end{equation*}
-where $d=9$, $t\in[0, 1]$ and $\vx\in[-5, 5]^d$.
-The solution $q^*=\log(p^*)$ is given as $p^*(t, \vx) \sim \mathcal N (0, \exp(-t)\mI_d + (1-\exp(-t))2\mI_d)$.
+where $d=9$, $t\in[0, 1]$ and $\vx\in[-5, 5]$. The solution $q^*=\log(p^*)$ is
+given as $p^*(t, \vx) \sim \mathcal N (0, \exp(-t)\mI + (1-\exp(-t))2\mI)$.
 The PINN loss includes the PDE residual and the initial conditions.
-We model the solution with a medium sized tanh-activated MLP with $D=\num{118145}$ and the layer structure $10 \to 256 \to 256 \to 128 \to 128 \to 1$ and use batch sizes of $N_{\Omega} = \num{3000}$, $N_{\partial\Omega} = \num{1000}$ (validation size is $\num{30000}$.
-Each run executes for $\num{6000}\,\text{s}$.
-\Cref{fig:fokker_10d-appendix} shows the results.
+We model the solution with a medium sized tanh-activated
+MLP with $D=\num{118145}$ and the layer structure
+$10 \to 256 \to 256 \to 128 \to 128 \to 1$ and use batch sizes of
+$N_{\Omega} = \num{3000}$, $N_{\partial\Omega} = \num{1000}$. Each run is
+assigned a budget of $\num{6000}\,\text{s}$. \Cref{fig:fokker_10d-appendix} visualizes the results.
 
 \begin{figure}[!h]
   \centering
@@ -1005,8 +947,8 @@ Each run executes for $\num{6000}\,\text{s}$.
     \includegraphics{\pathToFigs/loss_over_step.pdf}
   \end{subfigure}
   \caption{Training loss and evaluation $L_2$ error for
-  learning the solution to a (9+1)d log Fokker-Planck equation
-  over (\subref{subfig:poisson_10d-time}) time and (\subref{subfig:poisson_10d-step}) steps.}\label{fig:fokker_10d-appendix}
+    learning the solution to a (9+1)d log Fokker-Planck equation
+    over (\subref{subfig:poisson_10d-time}) time and (\subref{subfig:poisson_10d-step}) steps.}\label{fig:fokker_10d-appendix}
 \end{figure}
 
 \paragraph{Search space details} The runs shown in
@@ -1026,7 +968,6 @@ and $\mathcal{LU}$ a log-uniform distribution):
 
   We found that KFAC* requires very large exponential moving averages to work well.
 \end{itemize}
-
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../main"
