--- a/jitjet_pitch/slides/taylor_mode_forward_laplacian.tex
+++ b/jitjet_pitch/slides/taylor_mode_forward_laplacian.tex
@@ -1,5 +1,5 @@
 \begin{frame}[fragile,t]
-  \frametitle{From Taylor-mode to Forward Laplacian}
+  \frametitle{From Taylor-mode to Forward Laplacian {\scriptsize \citep{li2023forward}}}
 
   \only<3->{\vspace{-2ex}}
   \emph{Example:} Laplacian \quad $\Delta f_i^{(L)}(\vx) = \sum_j \frac{\partial^2 f_i^{(L)}(\vx)}{\partial x_j^2} = \sum_j \partial^2_{\ve_j} f_i^{(L)}(\vx)$
