--- a/jitjet_pitch/slides/motivation.tex
+++ b/jitjet_pitch/slides/motivation.tex
@@ -1,5 +1,5 @@
 \begin{frame}
-  \frametitle{TL;DR: KFAC for PINNs}
+  \frametitle{Motivation \& Contribution}
   \vspace{2ex}
   \ribbon[\paperwidth][black][VectorPink]{ \centering \textbf{We develop KFAC for, and apply it to, loss functions with differential operators.} }
   \begin{columns}
@@ -52,7 +52,7 @@
       \only<5>{%
         \vspace{0.5ex}
 
-        \emph{Second-order methods work well\dots}
+        \emph{2\textsuperscript{nd}-order works} {\scriptsize \citep[][ICML]{muller2023achieving}}
 
         \includegraphics[width=0.9\linewidth]{figures/poisson2d-02.pdf}
         \vspace{1ex}
@@ -60,7 +60,7 @@
       \only<6>{%
         \vspace{0.5ex}
 
-        \emph{\dots but proposed methods don't scale}
+        \emph{but proposed methods don't scale}
 
         \includegraphics[width=0.9\linewidth]{figures/poisson2d-medium-01.pdf}
         \vspace{1ex}
