--- a/jitjet_pitch/slides/taylor_mode_scalar_case.tex
+++ b/jitjet_pitch/slides/taylor_mode_scalar_case.tex
@@ -21,32 +21,32 @@
         \only<1>{%
           \textcolor{blue}{\textbf{Function}}%
           \&%
-          \includegraphics[scale=0.23]{/Users/fdangel/Documents/Postdoc/kfac-pinns/kfac_pinns_exp/exp48_visualization_taylor_mode/f_0.pdf}%
-          \& \includegraphics[scale=0.23]{/Users/fdangel/Documents/Postdoc/kfac-pinns/kfac_pinns_exp/exp48_visualization_taylor_mode/f_1.pdf}%
-          \& \includegraphics[scale=0.23]{/Users/fdangel/Documents/Postdoc/kfac-pinns/kfac_pinns_exp/exp48_visualization_taylor_mode/f_2.pdf}%
-          \& \includegraphics[scale=0.23]{/Users/fdangel/Documents/Postdoc/kfac-pinns/kfac_pinns_exp/exp48_visualization_taylor_mode/f_3.pdf}%
+          \includegraphics[scale=0.23]{../kfac_pinns_exp/exp48_visualization_taylor_mode/figures/f_0.pdf}%
+          \& \includegraphics[scale=0.23]{../kfac_pinns_exp/exp48_visualization_taylor_mode/figures/f_1.pdf}%
+          \& \includegraphics[scale=0.23]{../kfac_pinns_exp/exp48_visualization_taylor_mode/figures/f_2.pdf}%
+          \& \includegraphics[scale=0.23]{../kfac_pinns_exp/exp48_visualization_taylor_mode/figures/f_3.pdf}%
         }
         \\
         \only<2>{
           \textcolor{orange}{\textbf{0\textsuperscript{th}-order}}
-          \& \includegraphics[scale=0.23]{/Users/fdangel/Documents/Postdoc/kfac-pinns/kfac_pinns_exp/exp48_visualization_taylor_mode/f_0_taylor_0.pdf}
-          \& \includegraphics[scale=0.23]{/Users/fdangel/Documents/Postdoc/kfac-pinns/kfac_pinns_exp/exp48_visualization_taylor_mode/f_1_taylor_0.pdf}
-          \& \includegraphics[scale=0.23]{/Users/fdangel/Documents/Postdoc/kfac-pinns/kfac_pinns_exp/exp48_visualization_taylor_mode/f_2_taylor_0.pdf}
-          \& \includegraphics[scale=0.23]{/Users/fdangel/Documents/Postdoc/kfac-pinns/kfac_pinns_exp/exp48_visualization_taylor_mode/f_3_taylor_0.pdf}
+          \& \includegraphics[scale=0.23]{../kfac_pinns_exp/exp48_visualization_taylor_mode/figures/f_0_taylor_0.pdf}
+          \& \includegraphics[scale=0.23]{../kfac_pinns_exp/exp48_visualization_taylor_mode/figures/f_1_taylor_0.pdf}
+          \& \includegraphics[scale=0.23]{../kfac_pinns_exp/exp48_visualization_taylor_mode/figures/f_2_taylor_0.pdf}
+          \& \includegraphics[scale=0.23]{../kfac_pinns_exp/exp48_visualization_taylor_mode/figures/f_3_taylor_0.pdf}
         }
         \only<3>{
           \textcolor{orange}{\textbf{1\textsuperscript{st}-order}}
-          \& \includegraphics[scale=0.23]{/Users/fdangel/Documents/Postdoc/kfac-pinns/kfac_pinns_exp/exp48_visualization_taylor_mode/f_0_taylor_1.pdf}
-          \& \includegraphics[scale=0.23]{/Users/fdangel/Documents/Postdoc/kfac-pinns/kfac_pinns_exp/exp48_visualization_taylor_mode/f_1_taylor_1.pdf}
-          \& \includegraphics[scale=0.23]{/Users/fdangel/Documents/Postdoc/kfac-pinns/kfac_pinns_exp/exp48_visualization_taylor_mode/f_2_taylor_1.pdf}
-          \& \includegraphics[scale=0.23]{/Users/fdangel/Documents/Postdoc/kfac-pinns/kfac_pinns_exp/exp48_visualization_taylor_mode/f_3_taylor_1.pdf}
+          \& \includegraphics[scale=0.23]{../kfac_pinns_exp/exp48_visualization_taylor_mode/figures/f_0_taylor_1.pdf}
+          \& \includegraphics[scale=0.23]{../kfac_pinns_exp/exp48_visualization_taylor_mode/figures/f_1_taylor_1.pdf}
+          \& \includegraphics[scale=0.23]{../kfac_pinns_exp/exp48_visualization_taylor_mode/figures/f_2_taylor_1.pdf}
+          \& \includegraphics[scale=0.23]{../kfac_pinns_exp/exp48_visualization_taylor_mode/figures/f_3_taylor_1.pdf}
         }
         \only<4>{
           \textcolor{orange}{\textbf{2\textsuperscript{nd}-order}}
-          \& \includegraphics[scale=0.23]{/Users/fdangel/Documents/Postdoc/kfac-pinns/kfac_pinns_exp/exp48_visualization_taylor_mode/f_0_taylor_2.pdf}
-          \& \includegraphics[scale=0.23]{/Users/fdangel/Documents/Postdoc/kfac-pinns/kfac_pinns_exp/exp48_visualization_taylor_mode/f_1_taylor_2.pdf}
-          \& \includegraphics[scale=0.23]{/Users/fdangel/Documents/Postdoc/kfac-pinns/kfac_pinns_exp/exp48_visualization_taylor_mode/f_2_taylor_2.pdf}
-          \& \includegraphics[scale=0.23]{/Users/fdangel/Documents/Postdoc/kfac-pinns/kfac_pinns_exp/exp48_visualization_taylor_mode/f_3_taylor_2.pdf}
+          \& \includegraphics[scale=0.23]{../kfac_pinns_exp/exp48_visualization_taylor_mode/figures/f_0_taylor_2.pdf}
+          \& \includegraphics[scale=0.23]{../kfac_pinns_exp/exp48_visualization_taylor_mode/figures/f_1_taylor_2.pdf}
+          \& \includegraphics[scale=0.23]{../kfac_pinns_exp/exp48_visualization_taylor_mode/figures/f_2_taylor_2.pdf}
+          \& \includegraphics[scale=0.23]{../kfac_pinns_exp/exp48_visualization_taylor_mode/figures/f_3_taylor_2.pdf}
         }
         \\
         \only<2->{
