--- a/jitjet_pitch/slides/taylor_mode_vector_case.tex
+++ b/jitjet_pitch/slides/taylor_mode_vector_case.tex
@@ -20,10 +20,10 @@
         \& $f^{(L)} \circ \ldots \circ f^{(0)}$
         \\
         \textcolor{orange}{\textbf{2\textsuperscript{nd}-order}}
-        \& \includegraphics[scale=0.23]{/Users/fdangel/Documents/Postdoc/kfac-pinns/kfac_pinns_exp/exp48_visualization_taylor_mode/f_0_taylor_2.pdf}
-        \& \includegraphics[scale=0.23]{/Users/fdangel/Documents/Postdoc/kfac-pinns/kfac_pinns_exp/exp48_visualization_taylor_mode/f_1_taylor_2.pdf}
-        \& \includegraphics[scale=0.23]{/Users/fdangel/Documents/Postdoc/kfac-pinns/kfac_pinns_exp/exp48_visualization_taylor_mode/f_2_taylor_2.pdf}
-        \& \includegraphics[scale=0.23]{/Users/fdangel/Documents/Postdoc/kfac-pinns/kfac_pinns_exp/exp48_visualization_taylor_mode/f_3_taylor_2.pdf}
+        \& \includegraphics[scale=0.23]{../kfac_pinns_exp/exp48_visualization_taylor_mode/figures/f_0_taylor_2.pdf}
+        \& \includegraphics[scale=0.23]{../kfac_pinns_exp/exp48_visualization_taylor_mode/figures/f_1_taylor_2.pdf}
+        \& \includegraphics[scale=0.23]{../kfac_pinns_exp/exp48_visualization_taylor_mode/figures/f_2_taylor_2.pdf}
+        \& \includegraphics[scale=0.23]{../kfac_pinns_exp/exp48_visualization_taylor_mode/figures/f_3_taylor_2.pdf}
         \\
         \& $f^{(0)}(\vx) = \vx$
         \& $\left\{ f_i^{(1)}(f^{(0)}(\vx)) \right\}_i$
