--- a/paper/references.bib
+++ b/paper/references.bib
@@ -134,10 +134,8 @@
   title =        {{Achieving high accuracy with PINNs via energy natural
                   gradient descent}},
   author =       {M{\"u}ller, Johannes and Zeinhofer, Marius},
-  booktitle =    {International Conference on Machine Learning},
-  pages =        {25471--25485},
+  booktitle =    {International Conference on Machine Learning (ICML)},
   year =         2023,
-  organization = {PMLR}
 }
 
 @article{dissanayake1994neural,
